Updated README to include a link to forum topic

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 So uh
 Here's my mod
+Forum topic here: http://www.minecraftforum.net/topic/1565833-/
 If you wanna fork it and contribute back to my version
 that'd be great
 if you see anything you like here, feel free to steal it.
